vbnc/vbnc/vbnc/tests/Errors/30311-12.vb
Class T
    Const M_Date As Date = "2"c
End Class